--- a/index.html
+++ b/index.html
@@ -1,89 +1,174 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-    <h1 class="myh1">Mohammad Abu Shattal, Ph.D.</h1>
-    <img class="myImage" src="mas.png" >
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Omar Karzoun | Professional Branding</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <br>
-    <a href="http://www.abushattal.com">Visit my personal website</a> 
-    <br>
-    <a href="page2.html"> Test Javascript</a>
-      <br>
-    <p class="myP" >Dr. Abu Shattal (S'16-M'18) received B.Sc. in Computer Engineering from Yarmouk University, Irbid - Jordan, 2006 and M.S. in Communications Engineering from Mutah University, AlKarak - Jordan, 2011. He received his Ph.D. in Electrical and Computer Engineering from Western Michigan University (WMU), Kalamazoo, Michigan in 2017. Dr. Abu Shattal serves as a Program Chair of BS in Cloud Computing and as a Lead Faculty of IT in the Department of Computing Sciences and Mathematics at Franklin University. Previously, Dr. Abu Shattal served at The Ohio State University as Post Doctoral Researcher with the ElectroScience Lab in the Department of Electrical and Computer Engineering and as a Senior Lecturer in the Department of Computer Science Engineering. Dr. Abu Shattal is a member of IEEE and ACM and he is a Microsoft Certified System Administrator (MCSA), Professional (MCP), and Trainer (MCT). He serves as a Peer Reviewer for several journals such as IEEE Transactions on Vehicular Technology, IEEE Access, IEEE Communications Letters, and IEEE Wireless Communications Letters. He is also a TPC member of internationally recognized conferences such as IEEE VTC 2018-2019, IEEE COMMNET, and BROADNETs 2018-2020. </p>
-<hr>
-<h2 > Education</h2>
-    <ul>
-      <li><strong>Ph.D. in Electrical and Computer Engineering</strong>, 
-  Western Michigan University
-    Kalamazoo, MI 49008, USA. 2017
-  Dissertation Title: Bio-Socially Inspired Strategies in Support of Dynamic Spectrum Access: An Evolutionary Game Theory Perspective.
-</li>
-<li>
-  <strong>MS. in Communications Engineering</strong>, 
-Mutah University
-
-AlKarak, Jordan, 2011.
-
-Thesis title: Bluetooth Data Exchange over WLAN 802.11b: Analysis and Simulation of Bluetooth WLAN Integrated Network.
+<body>
+  <div class="content">
 
    
-    <li>
-<strong>B.Sc. in Computer Engineering, </strong>
-Yarmouk University
+    <div class="header">
+      <div class="header-left">
+        <h1 class="myh1">Omar Karzoun</h1>
+        <p class="tagline">IT & Network | Security + Systems Operations | Aspiring Analyst</p>
 
-Irbid, Jordan,  2006.
-  </li>
-    </ul>
-<h2 > Publications</h2>
+        <p class="subtag">Open to relocation • Fluent in Arabic & English</p>
 
-<ol>
-  <li> 
-    M. Abu Shattal, A. Al-Fuqaha, B. Khan, A. Wisniewska, K. Dombrowski, “Evolution of Bio-Socially Inspired Strategies in Support of Dynamic Spectrum Access ,” IEEE ICC 2017, Workshop on Flexible Networks (FlexNets), Paris, France, May 21-25, 2017.
-  </li>
-  <li>
-    M. Abu Shattal, A. Wisniewska, A. Al-Fuqaha, B. Khan, K. Dombrowski, “Evolutionary Game Theory Perspective on Dynamic Spectrum Access Etiquette,” IEEE Access, 2018.  </li>
+        <div class="nav-links">
+          <a href="#summary">Summary</a>
+          <a href="#education">Education</a>
+          <a href="#experience">Experience</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact</a>
+        </div>
 
-  <li>
-    M. Abu Shattal, A. Wisniewska, B. Khan, A. Al-Fuqaha, K. Dombrowski, “From Channel Selection to Strategy Selection: Enhancing VANETs using Foraging and Deference,” IEEE Transactions on Vehicular  Technology, 2018.
-  </li>
-</ol>
-<h2> Interests </h2>
-  <p></p>
+        <div class="external-links">
+          <a href="https://www.linkedin.com/in/omar-karzoun" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a href="https://github.com/omar-karzoun/professional-branding-page" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+          <a href="page2.html">Test JavaScript</a>
+        </div>
+      </div>
 
-  
-    <table id="mytable">
-      <tr>     <th>Research Interest</th>         <th>Teaching Interests</th>      </tr>
-      <tr>     <td>Wireless Communication</td>    <td>Wireless Communications</td>      </tr>
-      <tr>     <td>Dynamic Spectrum Access</td>   <td>Communications Systems</td> </tr>
-      <tr>     <td>  Internet of Things   </td>   <td>Cloud Computing   </td>  </tr>
-      <tr>     <td> Vehicular Networks    </td>   <td> Computer Networks </td>   </tr>
-      <tr>     <td>  Cognitive Radar  </td>       <td> Computer Programming (C/C++ and Python) </td> </tr>
-    </table>
-<br>
-<h3>Please send me your feedback:</h3>
-    <form action="index.html" method="get">
-      <label for="username">Email:</label>
-      <input type="text" id="email" name="email" value="abushattal@ieee.org">
-      <br>
-      <label for="feedback: ">Feedback:  </label>
-      <input  id="feedback" name="feedback" value="This is a sample website"/>
-      <br>
-      <input id="mybutton" type="submit" value="Submit">
-    </form> 
-
-
-    <button id="button2" > ClickMe
-    </button>
-    <textarea id="myTextArea" rows="5" cols="50">
-      </textarea>
+      <div class="header-right">
+        <img class="myImage" src="mas.png" alt="Profile photo">
+      </div>
     </div>
 
     
-    <script src="myscripts.js"> </script>
-  </body>
+    <div class="body">
+
+      
+      <div class="section card" id="summary">
+        <h2>Summary</h2>
+        <p class="myP">
+          Im an IT and network professional with hands-on experience across enterprise infrastructure, network security,
+          systems operations, and applied AI research. I’ve supported network-connected systems in operationally critical
+          environments and enjoy building organized, stream-like processes that improve reliability and performance.
+          Currently, Im pursuing a Bachelor of Business Administration in Management Information Systems with a focus on
+          network operations, infrastructure engineering, cloud-adjacent technologies, and security-focused IT services.
+        </p>
+
+        <div class="badges">
+          <span class="badge">CompTIA A+</span>
+          <span class="badge">R2V3 Certified</span>
+          <span class="badge">Anthropic AI Fluency & Framework</span>
+        </div>
+      </div>
+
+      <!-- EDUCATION -->
+      <div class="section card" id="education">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <strong>The Ohio State University</strong> — GPA: 3.5 (May 2026)<br>
+            Bachelor of Business Administration in <strong>Management Information Systems</strong>
+          </li>
+        </ul>
+
+        <p class="smallText">
+          Relevant Coursework: Java, Database Systems, Advanced Application Development, Business Intelligence,
+          Web Development with .NET, System Analysis & Design, Database Design & Tools
+        </p>
+      </div>
+
+      <!-- EXPERIENCE -->
+      <div class="section card" id="experience">
+        <h2>Work Experience</h2>
+
+        <div class="job">
+          <div class="jobTitle">
+            <strong>Pavion Corp.</strong> — New Albany, OH <span class="jobMeta">• Present</span>
+          </div>
+          <div class="jobRole">Network Security Engineer</div>
+          <ul>
+            <li>Supported deployment, integration, and validation of network-connected security systems in AWS data center environments (CCTV, access control, alarm systems, PoE-enabled devices).</li>
+            <li>Performed infrastructure buildouts and structured low-voltage cabling, including cable routing, device mounting, system power-ups, and connectivity validation.</li>
+            <li>Assisted with system integration and troubleshooting across networked security/infrastructure components, identifying cabling, connectivity, and hardware issues affecting availability.</li>
+            <li>Collaborated with engineers, electricians, and cross-functional teams to ensure installations aligned with AWS data center standards and security requirements.</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <div class="jobTitle">
+            <strong>College of Dentistry — The Ohio State University</strong> — Columbus, OH <span class="jobMeta">• Present</span>
+          </div>
+          <div class="jobRole">Information Systems Technician</div>
+          <ul>
+            <li>Supported enterprise endpoint systems (workstation imaging, OS/software deployment, asset tagging, lifecycle management) in a managed IT environment.</li>
+            <li>Served as a first point of escalation for technical issues, responding to incidents and coordinating next steps to reduce downtime.</li>
+            <li>Provided hands-on support for enterprise IT platforms and instructional technologies, including A/V and workspace walkthroughs.</li>
+            <li>Followed IT security policies and operational standards to maintain secure access, protect data integrity, and deliver consistent services.</li>
+            <li>Analyzed large datasets using Excel, SQL, and Python to support reporting and process improvement.</li>
+            <li>Built Power BI dashboards to improve visibility into business performance and decision-making.</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <div class="jobTitle">
+            <strong>Independent Research Fellowship</strong> <span class="jobMeta">• Sept 2025 – Jan 2026</span>
+          </div>
+          <div class="jobRole">AI Research Fellow (Applied AI / LLM Evaluation)</div>
+          <ul>
+            <li>Collaborated on applied AI research focused on evaluating and refining Large Language Models (LLMs).</li>
+            <li>Assessed model outputs for accuracy, contextual relevance, and consistency; contributed structured feedback to improve reliability.</li>
+            <li>Applied analytical judgment and quality evaluation frameworks to support responsible, scalable AI system development.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- SKILLS -->
+      <div class="section card" id="skills">
+        <h2>Skills</h2>
+
+        <ul>
+          <li><strong>Networking & Infrastructure:</strong> TCP/IP, Structured Cabling, PoE Devices, Networked Systems</li>
+          <li><strong>Systems & Operations:</strong> Endpoint Imaging, Software Deployment, Asset Management, IT Support</li>
+          <li><strong>Security:</strong> Network Security (advanced), Access Control Systems, CCTV</li>
+          <li><strong>Cloud/Data/Tools:</strong> Power BI, SQL, Python (foundational), AI/LLM Evaluation</li>
+          <li><strong>Operating Systems:</strong> Windows, Linux (foundational)</li>
+        </ul>
+      </div>
+
+      <!-- PROJECTS -->
+      <div class="section card" id="projects">
+        <h2>Projects</h2>
+        <ol>
+          <li><strong>Professional Branding Website</strong> — Built with HTML/CSS and structured with header/body/footer divisions.</li>
+          <li><strong>Theme Switcher</strong> — JavaScript button that toggles light/dark themes.</li>
+          <li><strong>Power BI Dashboarding</strong> — Built dashboards to improve visibility into performance and reporting.</li>
+        </ol>
+
+        <p class="repoLink">
+          GitHub Repo Link:
+          <a href="https://github.com/omar-karzoun/professional-branding-page" target="_blank" rel="noopener noreferrer">
+            View my code on GitHub
+          </a>
+        </p>
+      </div>
+
+      <!-- CONTACT -->
+      <div class="section card" id="contact">
+        <h2>Contact</h2>
+        <p><strong>Email:</strong> <a href="mailto:omar.m.karzoun@gmail.com">omar.m.karzoun@gmail.com</a></p>
+        <p><strong>Phone:</strong> <a href="tel:+16149569058">(614) 956-9058</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/omar-karzoun" target="_blank" rel="noopener noreferrer">linkedin.com/in/omar-karzoun</a></p>
+      </div>
+
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+      <p>© 2026 Omar Karzoun • Built with HTML & CSS</p>
+    </div>
+
+  </div>
+</body>
 </html>
+
+
