Fix GitHub repo link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
         <div class="external-links">
           <a href="https://www.linkedin.com/in/omar-karzoun" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-          <a href="https://github.com/omar-karzoun/professional-branding-page" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+          <a href="https://github.com/omarmkarzoun-git/Professional-Re-branding-page" target="_blank" rel="noopener noreferrer">
+           View my code on GitHub
+           </a>
           <a href="page2.html">Test JavaScript</a>
         </div>
       </div>
