Updated profile photo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="external-links">
           <a href="https://www.linkedin.com/in/omar-karzoun" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-          <a href="https://github.com/omarmkarzoun-git/Professional-Re-branding-page" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/omarmkarzoun-git/Professional-Re-branding-page.giy" target="_blank" rel="noopener noreferrer">
            View my code on GitHub
            </a>
           <a href="page2.html">Test JavaScript</a>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="header-right">
-        <img class="myImage" src="mas.png" alt="Profile photo">
+        <img class="myImage" src="Omar.jpg" alt="Profile photo">
       </div>
     </div>
 
