Updated profile picture and final page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="header-right">
-        <img class="myImage" src="Omar.jpg" alt="Profile photo">
+        <img class="myImage" src="Omar.jpg.JPG" alt="Profile photo">
       </div>
     </div>
 
