Fix GitHub repo link

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <p class="repoLink">
           GitHub Repo Link:
-          <a href="https://github.com/omar-karzoun/professional-branding-page" target="_blank" rel="noopener noreferrer">
+          <a href="https://omarmkarzoun-git.github.io/Professional-Re-branding-page/" target="_blank" rel="noopener noreferrer">
             View my code on GitHub
           </a>
         </p>
